# fastreid_model

./: .gitignore  CMakeLists.txt  main.cpp
include/fastrt/: reid_model.h
src/fastrt/: reid_model.cpp
